# Micromouse

./: .gitignore  README.md  exampleScript.m
MATLAB/: SimDriver.m  computeControlGain.m  generateSigma.m  getWeights.m  measModel.m  rk4.m  runEstimator.m  runSim.m  stateModel.m  x2z.m
Mapping/: README
Mapping/inc/: Edge.h  Edges.h  Location.h  Map.h  Micromouse.h  Node.h  Sensor.h
Mapping/src/: Main.cpp  Makefile  Map.cpp  Micromouse.cpp  Sensor_33x33_Map1.txt
astar/: AStar_Run.m  AStar_Script.m  AStar_Structure_Fast.m  exampleScript.m
astar/testScripts/: AStar_Run.m  AStar_Script.m  AStar_Structure.m
controller/inc/: StateModel.h
controller/src/: StateModel.cpp
mapping/: CMakeLists.txt  README  package.xml
mapping/inc/: Directions.h  Edge.h  Location.h  Map.h  Micromouse.h  Node.h  Obstacles.h  Sensor.h  Utilities.h
mapping/log/: Sensor_33x33_Map1.txt
mapping/src/: Main.cpp  Makefile  Map.cpp  Micromouse.cpp  Sensor.cpp  Utilities.cpp
maps/: mapGenerator.m  runMapGenerator.m
maps/10x10/diagonal/: map1.mat  map2.mat
maps/10x10/orthogonal/: map1.mat
maps/20x20/orthogonal/: map1.mat  map2.mat  map3.mat
maps/33x33/orthogonal/: map1.mat
micromouse_MATLAB/astar/: AStar_Run.m  AStar_Structure.m
micromouse_MATLAB/maps/: mapGenerator.m
micromouse_MATLAB/maps/10x10/diagonal/: map1.mat
micromouse_MATLAB/maps/10x10/orthogonal/: map1.mat
micromouse_MATLAB/maps/20x20/sparse/: map1.mat  map2.mat
micromouse_MATLAB/pathPlanner/: cutCorners.m  polyfitPath.m
micromouse_description/: CMakeLists.txt  package.xml
micromouse_description/gazebo/: sample_model.config  sample_model.sdf
micromouse_moveit_config/: CMakeLists.txt  package.xml
pathPlanner/: cutCorners.m  getDirectionField.m  polyfitPath.m
pathPlanner/tests/: interpolateTurns.m
simulation/: exampleScript.m  mappingBenchmark.m  micromouse.m  node.m  node_Mapping.m  pathLeastTraversed_Mapping.m  simulator.m
simulation/classes/: Location.h  Main.cpp  Micromouse.cpp  Micromouse.h  Obstacles.h  Sensor.h  micromouse.m  node.m  simulator.m
simulation/logFiles/: Test1_nodeMapping_33x33Map1_161219.txt  exportedNodeCommands_20x20Map3_161219.txt  exportedNodeCommands_33x33Map1_161219.txt  exportedOpenSpaceDirections_33x33Map1_161230.txt
simulation/misc/: Assumptions.txt
simulation/misc/old/: node_Mapping_V1.m
simulation/old/: testAlgorithm_Mapping.m
simulation/tests/: Test1_nodeMapping_161217  Test1_nodeMapping_161219
